[package]
name = "pumpfun-vanity"
version = "0.1.0"
edition = "2024"
description = "A fast CLI and library for generating Pumpfun vanity addresses."
authors = ["DevWonder01"]
license = "MIT"
repository = "https://github.com/DevWonder01/pumpfun-vanity-address"

[dependencies]
solana-sdk = "2.1.1" # Use a recent version
bs58 = "0.4"
rayon = "1.9" # For multithreading
clap = { version = "4.0", features = ["derive"] } # For CLI arguments
num_cpus = "1.17.0"
base64 = "0.22.1"

[dev-dependencies]
num_cpus = "1.17.0"
